<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StyleRootLayout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLoginLogo"
            style="@style/StyleMainLogo"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvTitleLogin"
            style="@style/StyleTitleLogging"
            android:text="@string/title_login" />

        <EditText
            android:id="@+id/etLoginEmail"
            style="@style/StyleEditTextLogging"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_login_input_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etLoginPassword"
            style="@style/StyleEditTextLogging"
            android:autofillHints="password"
            android:hint="@string/hint_login_input_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/StyleButtonLogging"
            android:text="@string/btn_login"
            app:icon="@drawable/ic_arrow_1"
            app:iconGravity="textEnd" />

        <TextView
            android:id="@+id/btnLoginRegistration"
            style="@style/StyleTextViewLink"
            android:text="@string/link_login_registration"
            app:iconGravity="textEnd" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>