<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivRegistrationLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvTitleRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elevation="4dp"
            android:text="@string/title_registration"
            android:textColor="#2B2E2D"
            android:textSize="24sp"
            android:viewportWidth="200" />

        <EditText
            android:id="@+id/etRegistrationEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/border"
            android:hint="@string/hint_login_input_email"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etRegistrationPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:hint="@string/hint_login_input_password"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etRegistrationConfirmPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:hint="@string/hint_registration_confirm_password"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="155dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1C1D1B"
            android:gravity="center"
            android:text="@string/btn_continue"
            android:textSize="11sp"
            app:icon="@drawable/ic_arrow_1"
            app:iconGravity="textEnd" />

        <TextView
            android:id="@+id/btnRegistrationContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#F5F5F5"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btn_login"
            android:textSize="16sp"
            app:iconGravity="textEnd" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>