<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <LinearLayout
        android:id="@+id/bottom_sheet_footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="#A2A1A6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/title_in_road_pa"
            android:textColor="#B3000000"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvPointA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/description_in_road_pa" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="#A2A1A6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/title_in_road_pb" />

        <TextView
            android:id="@+id/tvPointB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/description_in_road_pb" />

        <LinearLayout
            android:id="@+id/llTypeOfWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_type_of_work" />

            <TextView
                android:id="@+id/tvTypeOfWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_type_of_work" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llRoadActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llCallToDispatcher"
                style="@style/StyleLLInRoad"
                app:layout_constraintEnd_toStartOf="@+id/llRoadProblem"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/llRoadProblem">

                <ImageView
                    style="@style/StyleInRoadButtons"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/tvCallToDispatcher"
                    style="@style/StyleInRoadTextView"
                    android:text="@string/call_to_deapatcher" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRoadProblem"
                style="@style/StyleLLInRoad"
                app:layout_constraintEnd_toStartOf="@+id/llIncorrectRoad"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/llCallToDispatcher"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    style="@style/StyleInRoadButtons"
                    android:src="@drawable/ic_stop" />

                <TextView
                    android:id="@+id/tvRoadProblem"
                    style="@style/StyleInRoadTextView"
                    android:text="@string/road_problem" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llIncorrectRoad"
                style="@style/StyleLLInRoad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/llRoadProblem"
                app:layout_constraintTop_toTopOf="@+id/llRoadProblem">

                <ImageView
                    style="@style/StyleInRoadButtons"
                    android:src="@drawable/ic_globe" />

                <TextView
                    android:id="@+id/tvIncorrectRoad"
                    style="@style/StyleInRoadTextView"
                    android:text="@string/incorrect_road" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnLetsGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:backgroundTint="#FFCB08"
            android:text="@string/btn_login"
            android:textColor="#2B2E2D"
            app:icon="@drawable/ic_arrow_black"
            app:iconGravity="textEnd" />
    </LinearLayout>
</LinearLayout>