<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clOrder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivOrder"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/order"
        android:src="@drawable/random_img"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llOrderLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/ivOrder"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitleOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_order"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAddressOrder"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/example_address_order" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAgree"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginVertical="15dp"
        android:backgroundTint="#FFCB08"
        android:layout_marginEnd="10dp"
        android:padding="1dp"
        android:text="@string/order_agree"
        android:textColor="#2B2E2D"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/dividerOrder"
        app:layout_constraintEnd_toStartOf="@+id/llLocationTime"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llLocationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLocationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/work_type"/>

        <TextView
            android:id="@+id/tvLocationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/example_location_time" />
    </LinearLayout>

    <View
        android:id="@+id/dividerOrder"
        android:layout_width="match_parent"
        android:background="#A2A1A6"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llOrderLocation"/>
</androidx.constraintlayout.widget.ConstraintLayout>